# copilot-terminal-carousel

./: .env.example  .gitignore  COPILOT-PROMPT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py
backend/app/persistence/: __init__.py  index_store.py  meta_store.py  transcript_store.py
backend/app/sessions/: __init__.py  manager.py  pty_process.py
backend/app/util/: __init__.py  atomic_write.py  paths.py  time.py
backend/app/ws/: __init__.py  dispatcher.py  protocol.py  router.py
backend/tests/: conftest.py
backend/tests/integration/: test_pty_echo_fixture.py  test_ws_create_attach_terminate.py
backend/tests/test_data/sessions/: index.json
backend/tests/test_data/sessions/0227741f-5ee5-4671-a514-aed1885aa938/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/03ad74ac-0681-4162-852b-b9b8b717eb6f/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/041f8499-a6f6-48e8-bab6-f80c5d6b45d5/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/0679d18b-c4c5-49e4-8987-63b50ba5043b/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/091db24a-0d42-4347-aec0-5df3acf0ef64/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/09de0b1a-0fa9-4643-ae37-fcbb5ef46dc2/: meta.json  transcript.jsonl
backend/tests/test_data/sessions/0bbb21a4-5af8-4601-8efb-602a0c5b593f/: meta.json  transcript.jsonl
backend/tests/unit/: test_atomic_write.py  test_config.py  test_dispatcher.py  test_index_store.py  test_logging.py  test_main.py  test_meta_store.py  test_paths.py  test_protocol_validation.py  test_resize_bounds.py  test_session_manager.py  test_time.py  test_transcript_store.py
docs/: ARCHITECTURE.md  SUGGESTIONS.md  (+1 more)
(+217 files in other folders)
